# EPS32-UART-HTTP-CAlIENT

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/http_client/: http_client.c  http_client.h
main/http_parser/: http_parser.c  http_parser.h
main/http_queues/: http_queues.c  http_queues.h
main/uart/: uart_task.c  uart_task.h
